data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2430.wast
;; 1. **Test for Missing `end` Instruction**:    - Create a `block` instruction that lacks a matching `end` instruction at the end of the block. This will test how the implementation handles improperly nested instructions.    - Constraint: Ensuring well-nested blocks.    - CFG Impact: Incorrect CFG due to prematurely terminated blocks leading to potential branch misalignment.

(assert_invalid
  (module (func $test_missing_end (block (result i32) (i32.const 3)))
  "unexpected end of section or function"
)